# ICMMeteoLogger

./: CMakeLists.txt  ICMMeteoPicker.cpp  ICMMeteoPicker.h  ICMPos.cpp  ICMPos.h  Logger.cpp  Logger.h  main.cpp
